[tool.poetry]
name = "redis-request-caching"
version = "0.1.0"
description = "HTTP request caching with Python & Redis"
authors = ["rednafi <redowan.nafi@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.61.1"
httpx = "^0.16.1"
redis = "^3.5.3"
uvicorn = "^0.12.2"
uvloop = "^0.14.0"
konfik = "^2.0.0"

[tool.poetry.dev-dependencies]
isort = "^5.6.4"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# Third party configs
[tool.black]
line = 88
target-version = ["py38"]
exclude = "venv"

[tool.isort]
known_third_party = ["dotenv", "fastapi", "httpx", "redis"]
profile = "black"
